--- a/configurations/TOI-4504.ini
+++ b/configurations/TOI-4504.ini
@@ -18,7 +18,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = d 1/4 ifo c, planet c ω corrected to 270.9
+comment = as close to Vitkova paper as possible, excluding planet b
 video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
 frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
@@ -33,8 +33,8 @@ dt = 600                      # [s] <int> real time difference between simulatio
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-;sampling_rate = 120*(2458500-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 12*(2462280-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
+;sampling_rate = 12*(2462280-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -98,30 +98,23 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.66, 0.66, 0.01
 mass = (3.7672 - 0 * 0.18) * m_jup  # +-0.18
-;radius = 1000
 radius = 0.9897 * r_jup
 e = 0.0320 - 0 * 0.0015  # +-0.0015
 i = 89.69 - 0 * 0.03  # +-0.03
 P = 3600 * 24 * (82.5438 - 0 * 0.0163) # valid for epoch BJD = 2458400    +-0.0163
 longitude_of_ascending_node = 0 - 0 * 1  # Ω +-1
 argument_of_periapsis = 270.9  # 270.9 +-2.1???  ω
-T = 0
-t = 3600 * 24 * -1.4086  # first Transit T0 BJD 2458401.4086, 1.4086 days after simulation's start date
+ma = 173.1 - 0 * 2  # +-2
 
 
 [TOI-4504d]
 body_type = planet
 color = 0.01, 0.99, 0.01
 mass = 1.4166 * m_jup  # +-0.0649
-;radius = 1000
 radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
 e = 0.0445  # +-0.001
 i = 84.74  # +-0.29
 P = 3600 * 24 * 40.5634  # valid for epoch BJD = 2458400    +-0.0366
 longitude_of_ascending_node = 0  # Ω unknown
 argument_of_periapsis = 93.5 - 0 * 6  # +-6
-T = 0
-;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.5  # TOI-4504d start opposite of TOI-4504c
-t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.25  # TOI-4504d starts a quarter orbit in front of TOI-4504c
-;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * -0.25  # TOI-4504d starts a quarter orbit behind TOI-4504c
-;t = 3600 * 24 * -0.7 + (3600 * 24 * 40.5634) * 0.0  # TOI-4504d starts at same angle as TOI-4504c
+ma = 280.6 - 0 * 7.4  # +-7.4
