--- a/configurations/Sim001.ini
+++ b/configurations/Sim001.ini
@@ -18,14 +18,14 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = params as in Vitkova paper
-video_file = ../animations/TOI-4504.mp4  # <string> the resulting video is saved in this file
-result_file = ../results/TOI-4504.json  # <string> simulation results like transit times are saved in this file
+comment = Sim001
+video_file = ../animations/Sim001.mp4  # <string> the resulting video is saved in this file
+result_file = ../results/Sim001.json  # <string> simulation results like transit times are saved in this file
 frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
-dt = 600                      # [s] <int> real time difference between simulation iterations. Proportional to
+dt = 3600                      # [s] <int> real time difference between simulation iterations. Proportional to
                              # the velocity of the objects in the animation. Needs to be small in order to
                              # calculate with sufficient precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 10000 seconds. If
@@ -33,8 +33,7 @@ dt = 600                      # [s] <int> real time difference between simulatio
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-;sampling_rate = 12*(2520000-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
-sampling_rate = 12*(2462600-2458400)    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 2*(2485000-2460000)    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -60,7 +59,7 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # If necessary, scaling will be done logarithmically instead of linear.
 
 [Plot]
-start_date = 2458400.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation
+start_date = 2460000.0       # <float> Barycentric Julian Date (TDB) at the start of the simulation
 ;adjust the following plot parameters in this section only if the plots do not fit well on your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -70,51 +69,37 @@ red_dot_height = 1/20        # <float> relative height of red dot in light curve
 red_dot_width = 1/235        # <float> relative width of red dot in light curve plot
 
 
-[TOI-4504]
+[Sim001]
 body_type = star
 color = 0.99, 0.99, 0.99
-mass = (0.885 - 0 * 0.05) * m_sun       # +-0.05
-radius = 0.92 * r_sun
-luminosity = 0.62 * l_sun
-limb_darkening = [0.4765, 0.3495]  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+mass = 1 * m_sun
+radius = 1 * r_sun
+luminosity = 1 * l_sun
+limb_darkening = [0.49, 0.664]
 limb_darkening_parameter_type = q
 
 
-;[TOI-4504b]
-;body_type = planet
-;color = 0.99, 0.01, 0.01
-;mass = 10.4 * m_earth
-;radius = 2.691 * r_earth
-;e = 0.0
-;i = 87.4
-;P = 3600 * 24 * 2.42614
-;longitude_of_ascending_node = 0
-;argument_of_periapsis = 90
-;T = 0
-;t = 3600 * 24 * -0.383  # first Transit T0 BJD 2458400.383, 0.383 days after simulation's start date (t0 [BJD] 2459038.458)
-
-
-[TOI-4504c]
+[Sim001b]
 body_type = planet
-color = 0.99, 0.99, 0.01
-mass = (3.7672 - 0 * 0.18) * m_jup  # +-0.18
-radius = 0.9897 * r_jup
-e = 0.0320 - 0 * 0.0015  # +-0.0015
-i = 89.69 - 0 * 0.03  # +-0.03
-P = 3600 * 24 * (82.5438 - 0 * 0.0163) # valid for epoch BJD = 2458400    +-0.0163
-longitude_of_ascending_node = 0 + 0 * 1  # Ω +-1
-argument_of_periapsis = 270.9 -0 * 2.1 # 270.9 +-2.1???  ω
-ma = 173.1 - 0 * 2  # +-2
+color = 0.99, 0.66, 0.33
+mass = 1.0 * m_jup
+radius = 1.0 * r_jup
+e = 0.0
+i = 89.0
+P = 3600 * 24 * 50.0
+longitude_of_ascending_node = 0.0
+argument_of_periapsis = 0.0
+nu = 90.0
 
 
-[TOI-4504d]
+[Sim001c]
 body_type = planet
-color = 0.01, 0.99, 0.01
-mass = (1.4166 - 0 * 0.0649) * m_jup  # +-0.0649
-radius = 0.7156 * r_jup  # assuming TOI-4504d has the same density as TOI-4504c
-e = 0.0445 - 0 * 0.001 # +-0.001
-i = 84.74 - 0 * 0.29 # +-0.29
-P = 3600 * 24 * (40.5634 - 0 * 0.0366) # valid for epoch BJD = 2458400    +-0.0366
-longitude_of_ascending_node = 0  # Ω unknown
-argument_of_periapsis = 93.5 - 0 * 6  # +-6
-ma = 280.6 - 0 * 7.4  # +-7.4
+color = 0.01, 0.99, 0.6
+mass = 1.0 * m_jup
+radius = 1.0 * r_jup
+e = 0.0
+i = 90.0
+P = 3600 * 24 * 100.0
+longitude_of_ascending_node = 0.0
+argument_of_periapsis = 0.0
+nu = 150.0
