--- a/configurations/Sim001.ini
+++ b/configurations/Sim001.ini
@@ -18,7 +18,7 @@ m_earth = 5.9720e24          # [kg]  <float> Earth mass M⊕
 v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit was circular) V⊕
 
 [Video]                      # This section controls length and quality of the simulation and the resulting video.
-comment = Sim001
+comment = i85 P50, i90 P550
 video_file = ../animations/Sim001.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/Sim001.json  # <string> simulation results like transit times are saved in this file
 frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
@@ -33,7 +33,7 @@ dt = 3600                      # [s] <int> real time difference between simulati
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 2*(2485000-2460000)    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 2*(2560000-2460000)    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
@@ -73,7 +73,7 @@ red_dot_width = 1/235        # <float> relative width of red dot in light curve 
 body_type = star
 color = 0.99, 0.99, 0.99
 mass = 1 * m_sun
-radius = 1 * r_sun
+radius = 10 * r_sun
 luminosity = 1 * l_sun
 limb_darkening = [0.49, 0.664]
 limb_darkening_parameter_type = q
@@ -83,9 +83,9 @@ limb_darkening_parameter_type = q
 body_type = planet
 color = 0.99, 0.66, 0.33
 mass = 1.0 * m_jup
-radius = 0.1 * r_sun
+radius = 0.1 * r_jup
 e = 0.0
-i = 89.0
+i = 85.0
 P = 3600 * 24 * 50.0
 longitude_of_ascending_node = 0.0
 argument_of_periapsis = 0.0
@@ -96,10 +96,10 @@ nu = 90.0
 body_type = planet
 color = 0.01, 0.99, 0.6
 mass = 1.0 * m_jup
-radius = 0.1 * r_sun
+radius = 0.1 * r_jup
 e = 0.0
 i = 90.0
-P = 3600 * 24 * 5000.0
+P = 3600 * 24 * 550.0
 longitude_of_ascending_node = 0.0
 argument_of_periapsis = 0.0
 nu = 150.0
