--- a/configurations/Sim001.ini
+++ b/configurations/Sim001.ini
@@ -21,7 +21,7 @@ v_earth = 2.97852e4          # [m/s] <float> Earth orbital velocity (if orbit wa
 comment = i81 P50, i90 P5000
 video_file = ../animations/Sim001.mp4  # <string> the resulting video is saved in this file
 result_file = ../results/Sim001.json  # <string> simulation results like transit times are saved in this file
-frames = 12                 # <int> number of frames of video. Proportional to Curvesimulator's run time
+frames = 1                 # <int> number of frames of video. Proportional to Curvesimulator's run time
                              # and to the length of the animation.
 fps = 30                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
@@ -33,7 +33,7 @@ dt = 3600                      # [s] <int> real time difference between simulati
                              # dt * sampling_rate is the real time difference between 2 frames in the animation.
                              # If your star system produces eclipses, dt * sampling_rate should be < 1000 in
                              # order to generate an accurate light curve.
-sampling_rate = 2*(2660000-2460000)    # <int> Calculating the physics is much faster than animating it. Therefore only
+sampling_rate = 2000    # <int> Calculating the physics is much faster than animating it. Therefore only
                              # 1/sampling_rate of the calculated iterations is used as a frame in the animation.
                              # In other words: The simulation's number of calculated iterations and also the
                              # length of the array with light curve data will be equal to frames * sampling_rate.
