--- a/configurations/KEPLER9.ini
+++ b/configurations/KEPLER9.ini
@@ -29,18 +29,18 @@ max_intervall_extensions = 5 # In unstable systems or when using a very large dt
                              # If no TT has been found max_intervall_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = K9                 # You can use this comment for example as diagram title in your result plots
-;verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
+verbose = True              # If False (which is default), only error messages will be printed to the console. Useful when running MCMC.
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
-start_date = 2454900         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
+start_date = 2455088.212         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 1e5                     # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
                              # precision when objects are close to each other.
                              # Reasonable values can easily be under 10 seconds or over 1e6 seconds.
                              # Set dt to a relatively high value, to improve performance when running MCMC
                              # Set dt to a relatively low value, when you want exact transit times in the result file.
-starts = [2454900]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
+starts = [2455088.212]           # [days] <float> starting times of the intervalls for which simulation data will be calculated
 ends =   [2456400]           # [days] <float>   ending times of the intervalls for which simulation data will be calculated
 dts =    [10000]             # [s] <float> real time differences between simulation iterations inside each intervall
                              # When fitting the simulation to measured flux, dt is typically identical with the exposure time of each measurement.
@@ -64,7 +64,8 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;lmfit = True                # True for LMfit, False for MCMC
-tt_file = ../data/KEPLER9/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/KEPLER9/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/KEPLER9/tt_late.csv # <string> file with measured transit times (real data)
 eclipsers_names = KEPLER9b, KEPLER9c  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = KEPLER9             # only transits eclipsing these bodies are relevant when fitting for TT
 
@@ -128,11 +129,11 @@ red_dot_width = 1/235        # <float> width of red dot in light curve plot rela
 body_type = star
 primary = self
 color = 0.99, 0.99, 0.99
-mass =                          1.05   * m_sun             # ±0.03
-radius =                        0.9742 * r_sun             # ±0.0083
-luminosity =                    0.9742 * 0.9742 * l_sun    # L ∝ R**2 * T**4,  T almost identical to sol
-limb_darkening_1 =              0.351                      # ±0.047
-limb_darkening_2 =              0.269                      # ±0.071
+mass =                          1.05   * m_sun             # +-0.03
+radius =                        0.9742 * r_sun             # +-0.0083
+luminosity =                    0.9742 * 0.9742 * l_sun    # L is proportional to R**2 * T**4,  T almost identical to sol
+limb_darkening_1 =              0.351                      # +-0.047
+limb_darkening_2 =              0.269                      # +-0.071
 limb_darkening_parameter_type = u
 
 
@@ -144,7 +145,7 @@ mass =      10 * m_earth
 radius =    1.64 * r_earth  # +0.19 −0.14
 e =         0
 i =         90
-P =         1.592851 * day  # ± 0.000045
+P =         1.592851 * day  # +- 0.000045
 Omega =     0
 omega =     0
 ma =        0
@@ -152,8 +153,9 @@ ma =        0
 
 ##############################################################################################################
 ##############################################################################################################
-                                    next: b und c Params ausser P eintragen
-                                    dann ma von b ermitteln, so dass T0 passt
+;                                    next: b und c Params ausser P eintragen
+;                                    dann ma von b ermitteln, so dass T0 passt
+;       epoch teilweise 2454900 und teilweise 2455088.212 !!!
 ##############################################################################################################
 ##############################################################################################################
 [KEPLER9b]
@@ -161,14 +163,14 @@ body_type = planet
 primary =   KEPLER9
 color =     0.01, 0.7, 0.7
 #           value               lower bound       upper bound        sigma
-mass =      1.4166 * m_jup,     0.1 * m_jup,      10.0 * m_jup,       0.5 * m_jup
-radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.0445,             0.0,              0.15,              0.035
-i =         89.0              # 86.5,             89.5,              0.5
+mass =      43.4 * m_earth,     20 * m_earth,     80 * m_earth,      1.8 * m_earth
+radius =    8.29 * r_earth,   #                                      0.5 * r_earth
+e =         0.0609,             0.05,             0.07,              0.0012
+i =         88.983            #                                      0.006
 P =         19.25 * day,        19.15 * day,      19.35 * day,       0.05 * day
-Omega =     0,                # -15,              15,                8
-omega =     180,              # 0,                359.99,            120
-ma =        180,                0,                359.99,            120
+Omega =     180,              #                                      fix
+omega =     357,                355,              359,               0.5
+ma =        2.6,                0,                5,                 0.6
     
     
 [KEPLER9c]
@@ -176,11 +178,11 @@ body_type = planet
 primary =   KEPLER9
 color =     0.7, 0.01, 0.7
 #           value               lower bound       upper bound        sigma
-mass =      3.7672 * m_jup,     0.1 * m_jup,      10.0 * m_jup,      0.5 * m_jup
-radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.0320,             0.0,              0.10,              0.025
-i =         89.79,            # 89.25,            90.0,              0.15
+mass =      29.9 * m_earth,     15 * m_earth,     60.0 * m_earth,    1.2 * m_earth
+radius =    8.08 * r_earth,   #                                      0.5 * r_earth
+e =         0.06691,            0.055,            0.075,             0.00011
+i =         89.188,           #                                      0.006
 P =         38.95 * day,        38.5 * day,       39.5 * day,        0.1 * day
-Omega =     0.8,              # -15,              15,                3
-omega =     271,              # 0,                359.99,            120
-ma =        173,                0,                359.99,            120
+Omega =     179,                177,              181,               0.2
+omega =     167.5,              167,              168,               0.1
+ma =        307.4,              307,              308,               0.1
