--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -29,16 +29,16 @@ max_interval_extensions = 5  # In unstable systems or when using a very large dt
                              # If no TT has been found max_interval_extensions * dt around the expected interval between 2 iterations
                              # the search for this particular TT will be aborted. (dt comes from the list dts.)
 comment = debug               # You can use this comment for example as diagram title in your result plots
-verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
+;verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
+;action = single_run          # No fitting. Just a single run of the simulation.
 ;action = lmfit
 ;action = guifit
-;action = mcmc
+action = mcmc
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -78,9 +78,9 @@ lmfit_method = powell
 ;lmfit_method = differential_evolution
 ;lmfit_method = nelder
 flux_weight = 1  # weighting flux residuals against rv and tt residuals
-rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
+;rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
-tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/simulations/tt_sim.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
@@ -89,8 +89,8 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 ;backend = X055_backend.h5
 ;load_backend = True
-walkers = 32             # Number of mcmc chains
-burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 256             # Number of mcmc chains
+burn_in = 2000              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7              # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -110,8 +110,8 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 10             # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 2000             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -195,14 +195,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,    # 0.2 * r_jup,      4.0 * r_jup,       0.8 * r_jup
-e =         0.2498,             0.0,              0.5,               0.005
-i =         91.09,            # 91.00,            91.25,             0.01
-P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
-Omega =     0.24,               -10,              10,                2.7
-omega =     275.80,             100,              460,               4.0
-ma =        -20.46,             -200,             160,               8.0
+mass =      2.1278 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
+radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.5 * r_jup
+e =         0.2498,           # 0.0,              0.5,               0.005
+i =         91.09,              90.00,            92.0,              0.3
+P =         41.7878 * day,    # 40 * day,         43 * day,          0.03 * day
+Omega =     0.24,             # -10,              10,                2.7
+omega =     275.80,           # 100,              460,               4.0
+ma =        -20.46,           # -200,             160,               8.0
 
 
 [TOI4504c]
@@ -210,11 +210,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,   # 0.8 * r_jup,      1.2 * r_jup,       0.15 * r_jup
-e =         0.04217,            0.0,              0.5,               0.0035
-i =         89.69,            # 89.25,            90.0,              0.2
-P =         80.7610 * day,      80.0 * day,       84 * day,          0.07 * day
+mass =      2.6315 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
+radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+e =         0.04217,          # 0.0,              0.5,               0.0035
+i =         89.69,              89.25,            90.0,              0.3
+P =         80.7610 * day,    # 80.0 * day,       84 * day,          0.07 * day
 Omega =     0.8,              #
-omega =     -66.18,             -250,             110,               6.0
-ma =        147.88,             -30,              330,               6.0
+omega =     -66.18,           # -250,             110,               6.0
+ma =        147.88,           # -30,              330,               6.0
