--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -35,10 +35,10 @@ comment = debug               # You can use this comment for example as diagram 
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
+;action = single_run          # No fitting. Just a single run of the simulation.
+action = mcmc
 ;action = lmfit
 ;action = guifit
-;action = mcmc
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
 dt = 75000                   # [s] <float> real time difference between simulation iterations outside of simulation intervals where data is collected and used
                              # Needs to be small enough in order to calculate with sufficient
@@ -89,8 +89,8 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 ;backend = X055_backend.h5
 ;load_backend = True
-walkers = 256             # Number of mcmc chains
-burn_in = 100              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+walkers = 32             # Number of mcmc chains
+burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 steps = 1e7              # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -110,8 +110,8 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 50            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 100             # Every chunk_size steps after burn-in phase, results will be saved.
+thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 1             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -195,14 +195,14 @@ body_type = planet
 primary =   TOI-4504
 color =     0.01, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.1278 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.5 * r_jup
-e =         0.2498,           # 0.0,              0.5,               0.005
+mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
+radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
+e =         0.2498,             0.0,              0.5,               0.005
 i =         91.09,              90.00,            92.0,              0.3
-P =         41.7878 * day,    # 40 * day,         43 * day,          0.03 * day
-Omega =     0.24,             # -10,              10,                2.7
-omega =     275.80,           # 100,              460,               4.0
-ma =        -20.46,           # -200,             160,               8.0
+P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
+Omega =     0.24,               -10,              10,                2.7
+omega =     275.80,             100,              460,               4.0
+ma =        -20.46,             -200,             160,               8.0
 
 
 [TOI4504c]
@@ -210,11 +210,11 @@ body_type = planet
 primary =   TOI-4504
 color =     0.99, 0.99, 0.01
 #           value               lower bound       upper bound        sigma
-mass =      2.6315 * m_jup,   # 1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
+mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
 radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
-e =         0.04217,          # 0.0,              0.5,               0.0035
+e =         0.04217,            0.0,              0.5,               0.0035
 i =         89.69,              89.25,            90.0,              0.3
-P =         80.7610 * day,    # 80.0 * day,       84 * day,          0.07 * day
-Omega =     0.8,              #
-omega =     -66.18,           # -250,             110,               6.0
-ma =        147.88,           # -30,              330,               6.0
+P =         80.7610 * day,      80.0 * day,       84 * day,          0.07 * day
+Omega =     0.8,
+omega =     -66.18,             -250,             110,               6.0
+ma =        147.88,             -30,              330,               6.0
